# quarry

./: .gitignore  Cargo.toml  etl.toml  flake.nix  papeline.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: accumulator.rs  config.rs  error.rs  hive.rs  id.rs  lib.rs  manifest.rs  progress.rs  provider.rs  remote.rs  retry.rs  schema.rs  sink.rs  stream.rs
core/src/embed/: embedder.rs  http_backend.rs  io.rs  mod.rs  ort_backend.rs  tokenize.rs
core/src/oa/: mod.rs  pipeline.rs
core/src/transform/: fanout.rs  mod.rs  model.rs  works.rs
embed/: Cargo.toml
embed/src/: embedder.rs  http_backend.rs  io.rs  main.rs  ort_backend.rs
nix/: formatter.nix  package.nix  shell.nix
py/: Cargo.toml  pyproject.toml
py/python/papeline/: __init__.py  cli.py
py/python/quarry_etl/: __init__.py  cli.py
py/src/: lib.rs
src/: accumulator.rs  api.rs  config.rs  error.rs  hive.rs  main.rs  manifest.rs  progress.rs  provider.rs  remote.rs  retry.rs  schema.rs  sink.rs  stream.rs  sync.rs  upload.rs
src/oa/: mod.rs  pipeline.rs
src/transform/: fanout.rs  mod.rs  model.rs  works.rs
tests/: incremental.rs
