[package]
name = "papeline"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "papeline"
path = "src/main.rs"

[dependencies]
# Arrow ecosystem
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow", "zstd"] }
datafusion = "46"

# Hashing
sha2 = "0.10"

# HTTP
reqwest = { version = "0.12", features = ["native-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "io-util"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# Compression
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Utilities
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1"
rustc-hash = "2"
num_cpus = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde_json = "1"
walkdir = "2"
regex = "1"

[lints.clippy]
needless_pass_by_value = "warn"
unnested_or_patterns = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Profiling: release perf with debug symbols for perf/flamegraph.
[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.dev.package."*"]
opt-level = 2
