[workspace]
members = [".", "core"]
resolver = "3"

[workspace.dependencies]
# Arrow ecosystem
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow", "zstd"] }

# Hashing
sha2 = "0.10"
blake3 = "1"

# HTTP
reqwest = { version = "0.12", features = ["native-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "io-util", "fs"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# S3-compatible upload (Cloudflare R2)
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-native-tls", "fail-on-err"] }

# Compression
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Utilities
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1"
rustc-hash = "2"
libc = "0.2"
num_cpus = "1"

# Dev
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde_json = "1"
walkdir = "2"
regex = "1"

[workspace.lints.clippy]
needless_pass_by_value = "warn"
unnested_or_patterns = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"

# ============================================================
# CLI binary
# ============================================================

[package]
name = "papeline"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "papeline"
path = "src/main.rs"

[dependencies]
papeline-core = { path = "core" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
rustc-hash = { workspace = true }
libc = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Profiling: release perf with debug symbols for perf/flamegraph.
[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.dev.package."*"]
opt-level = 2
