[package]
name = "quarry-etl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quarry-etl"
path = "src/main.rs"

[features]
default = ["local"]
local = ["quarry-etl-core/local"]
cuda = ["quarry-etl-core/cuda"]
coreml = ["quarry-etl-core/coreml"]

[dependencies]
quarry-etl-core = { path = "../core", default-features = false }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
signal-hook = { workspace = true }

[lints]
workspace = true
