[package]
name = "quarry-etl-core"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
rust-s3 = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
num_cpus = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
