[package]
name = "quarry-etl-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["local"]
local = ["dep:ort", "dep:tokenizers"]
cuda = ["local", "ort/cuda"]
coreml = ["local", "ort/coreml"]

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
rust-s3 = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
num_cpus = { workspace = true }
tracing-subscriber = { workspace = true }

# Embed: local ORT backend (optional)
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
