[package]
name = "quarry-etl-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
quarry-etl-core = { path = "../core" }
pyo3 = { workspace = true }
rustc-hash = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
signal-hook = "0.3"

[lints.clippy]
needless_pass_by_value = "allow"
too_many_arguments = "allow"
unnested_or_patterns = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
