[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "papeline"
version = "0.1.0"
description = "Academic paper data pipeline (OpenAlex) — Python bindings"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
papeline = "papeline.cli:app"

[tool.maturin]
python-source = "python"
module-name = "papeline._native"
features = ["pyo3/extension-module"]
